# freshbooks-tools

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
src/freshbooks_tools/: __init__.py  auth.py  cli.py  config.py  exceptions.py
src/freshbooks_tools/api/: __init__.py  client.py  expenses.py  invoices.py  projects.py  rates.py  reports.py  team.py  time_entries.py
src/freshbooks_tools/models/: __init__.py  schemas.py
src/freshbooks_tools/ui/: __init__.py  exporters.py  invoice_browser.py  tables.py
tests/: __init__.py  conftest.py  test_cli_reports.py  test_freshbooks_client.py  test_reports_api.py
tests/fixtures/: ar_aging_response.json  error_401_response.json  profit_loss_response.json  user_me_response.json
